---
title: V-SPORT ERD - Đặt sân & Lịch
---
erDiagram
  LichDatSan {
    INT DatSanID PK "NOT NULL"
    INT AccountID
    INT SanID
    DATE NgayDat "NOT NULL"
    TIME GioBatDau "NOT NULL"
    TIME GioKetThuc "NOT NULL"
    BIT ApDungGiaCoDen
    NUMERIC(38,2) TongTienDuKien
    NVARCHAR(50) TrangThai
    NVARCHAR(255) GhiChu
    NVARCHAR(50) NguonDatSan
    BIT IsDeleted
    DATETIME CreatedTime
    DATETIME DeletedAt
    INT DeletedBy
    TIME actual_start_time
    NVARCHAR(30) TimeMode
    INT ReservedDurationMinutes
    TIME actual_end_time
    NVARCHAR(255) EarlyCheckoutReason
    DECIMAL(18,2) EarlyCheckoutDiscount
    DATETIME2 HoldExpiresAt
    DECIMAL(18,2) DepositAmount
    NVARCHAR(50) PaymentMethodConfirmed
    NVARCHAR(100) TransactionCode
    DATETIME2 ConfirmedAt
    INT ConfirmedBy
    NVARCHAR(20) ConfirmSource
    DATETIME2 NoShowAt
    DATETIME2 ActualStartAt
    DATETIME2 ActualEndAt
    DATETIME2 PricingFinalizedAt
    NVARCHAR(20) CancelType
    NVARCHAR(255) CancelReason
    DATETIME2 CancelledAt
    INT CancelledBy
    BIT RequiresRefundReview "NOT NULL"
    BIGINT PayosOrderCode
    VARCHAR(255) PayosPaymentLinkId
    NVARCHAR(MAX) PayosQrPayload
    NVARCHAR(1024) PayosCheckoutUrl
    VARCHAR(20) PayosBin
    VARCHAR(64) PayosAccountNumber
    NVARCHAR(255) PayosAccountName
    DECIMAL(18,2) PayosAmount
    NVARCHAR(255) PayosDescription
    DATETIME2 PayosExpiresAt
  }
  SoftHold {
    INT SoftHoldID PK "NOT NULL"
    INT AccountID "NOT NULL"
    INT SanID "NOT NULL"
    DATE NgayDat "NOT NULL"
    TIME GioBatDau "NOT NULL"
    TIME GioKetThuc "NOT NULL"
    DATETIME CreatedTime "NOT NULL"
  }
  CourtChargeSegment {
    INT SegmentID PK "NOT NULL"
    INT HoaDonID "NOT NULL"
    INT DatSanID "NOT NULL"
    INT SegmentOrder "NOT NULL"
    DATETIME2 StartAt "NOT NULL"
    DATETIME2 EndAt "NOT NULL"
    INT DurationMinutes "NOT NULL"
    NVARCHAR(30) RateType "NOT NULL"
    DECIMAL(18,2) HourlyRate "NOT NULL"
    DECIMAL(18,2) Amount "NOT NULL"
    DATETIME2 CreatedAt "NOT NULL"
  }
  CaLamViec {
    INT CaLamViecID PK "NOT NULL"
    INT AccountID "NOT NULL"
    INT CoSoID "NOT NULL"
    DATE NgayLam "NOT NULL"
    TIME GioBatDau "NOT NULL"
    TIME GioKetThuc "NOT NULL"
    NVARCHAR(255) GhiChu
    INT Thu
    BIT IsPublished "NOT NULL"
    NVARCHAR(50) TenCa
    NVARCHAR(50) ViTri
    VARCHAR(30) TrangThai "NOT NULL"
    INT GioNghi "NOT NULL"
    BIT IsDeleted "NOT NULL"
    DATETIME DeletedAt
    INT DeletedBy
    BIT IsCustomTime "NOT NULL"
    NVARCHAR(255) CustomTimeReason
  }
  CaLamViec_Audit {
    INT AuditID PK "NOT NULL"
    INT CaLamViecID "NOT NULL"
    VARCHAR(50) ThaoTac "NOT NULL"
    INT NguoiThucHien "NOT NULL"
    DATETIME ThoiGian
    NVARCHAR(MAX) GiaTriCu
    NVARCHAR(MAX) GiaTriMoi
    NVARCHAR(255) LyDo
  }
  CaLamViec_Availability {
    INT AvailabilityID PK "NOT NULL"
    INT AccountID "NOT NULL"
    INT CoSoID "NOT NULL"
    DATE Ngay "NOT NULL"
    TIME GioBatDau "NOT NULL"
    TIME GioKetThuc "NOT NULL"
    VARCHAR(20) TrangThai "NOT NULL"
    NVARCHAR(255) GhiChu
    DATETIME CreatedAt
    VARCHAR(20) DuyetTrangThai
    NVARCHAR(255) PhanHoi
  }
  CaLamViec_SwapRequest {
    INT SwapRequestID PK "NOT NULL"
    INT AccountID_Gui "NOT NULL"
    INT CaLamViecID_Gui "NOT NULL"
    INT AccountID_Nhan "NOT NULL"
    INT CaLamViecID_Nhan
    NVARCHAR(255) LyDo
    VARCHAR(30) TrangThai "NOT NULL"
    INT NguoiDuyet
    DATETIME NgayGui
    DATETIME NgayDuyet
    NVARCHAR(255) GhiChuQuanLy
  }
  YeuCauNghi {
    INT YeuCauNghiID PK "NOT NULL"
    INT AccountID "NOT NULL"
    INT CoSoID "NOT NULL"
    DATE NgayNghi "NOT NULL"
    VARCHAR(50) LoaiNghi "NOT NULL"
    NVARCHAR(500) LyDo
    BIT MucDoKhanCap
    VARCHAR(20) TrangThai "NOT NULL"
    NVARCHAR(500) GhiChuQuanLy
    DATETIME NgayXuLy
    INT XuLyBy
    DATETIME NgayGui
    DATETIME CreatedAt
    DATETIME UpdatedAt
    VARCHAR(255) QuanLyXuLy
    VARCHAR(255) RoleName
    INT SoCaBiAnhHuong
    VARCHAR(255) TenCoSo
    VARCHAR(255) TenNhanVien
    VARCHAR(255) username
    BIT IsDeleted "NOT NULL"
    DATETIME DeletedAt
    INT DeletedBy
  }
  YeuCauNghi_Audit {
    INT AuditID PK "NOT NULL"
    INT YeuCauNghiID "NOT NULL"
    VARCHAR(50) ThaoTac "NOT NULL"
    INT NguoiThucHien "NOT NULL"
    DATETIME ThoiGian
    NVARCHAR(MAX) GiaTriCu
    NVARCHAR(MAX) GiaTriMoi
  }
  Accounts ||--o{ CaLamViec : "AccountID"
  CoSo ||--o{ CaLamViec : "CoSoID"
  Accounts ||--o{ CaLamViec_Audit : "NguoiThucHien"
  Accounts ||--o{ CaLamViec_Availability : "AccountID"
  CoSo ||--o{ CaLamViec_Availability : "CoSoID"
  Accounts ||--o{ CaLamViec_SwapRequest : "AccountID_Gui"
  CaLamViec ||--o{ CaLamViec_SwapRequest : "CaLamViecID_Gui"
  HoaDon ||--o{ CourtChargeSegment : "HoaDonID"
  LichDatSan ||--o{ CourtChargeSegment : "DatSanID"
  Accounts ||--o{ LichDatSan : "AccountID"
  San ||--o{ LichDatSan : "SanID"
  Accounts ||--o{ SoftHold : "AccountID"
  San ||--o{ SoftHold : "SanID"
  Accounts ||--o{ YeuCauNghi : "AccountID"
  CoSo ||--o{ YeuCauNghi : "CoSoID"
  Accounts ||--o{ YeuCauNghi_Audit : "NguoiThucHien"
  YeuCauNghi ||--o{ YeuCauNghi_Audit : "YeuCauNghiID"
